--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         color: white;
         font-weight: bold;
         font-size: 28px;
+        text-align: center;
       }
     </style>
   </head>
