--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
         
       }
       h1 {
+    display: flex;
+    align-items: center;
         color: white;
         font-weight: bold;
         font-size: 28px;
         text-align: center;
-      }
+    Padding: 10px,0,10px,0;
+  }
     </style>
   </head>
   <body>
